# cel_shader

./: CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  DataGrid.cpp  DataGrid.h  Helpers.cpp  Helpers.h  Light.h  Material.cpp  Material.h  NormalGrid.cpp  NormalGrid.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Point.cpp  Point.h  PointLight.cpp  PointLight.h  RT.exe.stackdump  Random.cpp  Random.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  SceneMaker.h  Sphere.cpp  Sphere.h  SunLight.h  Triangle.cpp  Triangle.h  UVPoint.cpp  UVPoint.h  raytracer.cpp
Bounding/: BoundingBox.cpp  BoundingBox.h  Node.cpp  Node.h
Grids/: DataGrid.cpp  DataGrid.h  DistGrid.cpp  DistGrid.h  NormalGrid.cpp  NormalGrid.h
Lights/: BoxLight.cpp  BoxLight.h  Light.cpp  Light.h  PointLight.h  SunLight.cpp  SunLight.h
Objects/: AABox.cpp  AABox.h  Object.h  Plane.h  Sphere.h  Triangle.h
renders/: earth_hq.ppm  image_1.ppm  image_10_14_12-51-14.ppm  image_10_14_13-12-7.ppm  image_10_14_13-17-22.ppm  image_10_14_13-2-36.ppm  image_10_14_13-4-2.ppm  image_10_14_13-6-29.ppm  image_10_14_13-8-34.ppm  image_10_14_18-4-5.ppm  image_10_15_12-9-4.ppm  image_10_15_13-13-30.ppm  image_10_15_21-17-20.ppm  image_10_15_21-19-7.ppm  image_10_15_21-25-59.ppm  image_10_18_12-21-23.ppm  image_10_18_12-22-1.ppm  image_10_18_12-24-54.ppm  image_10_18_16-27-51.ppm  image_10_18_16-28-34.ppm  image_10_18_16-29-29.ppm  image_10_7_12-35-2.ppm  image_10_7_12-37-8.ppm  image_10_7_12-52-54.ppm  image_10_7_12-54-25.ppm  image_10_7_12-55-32.ppm  image_10_7_12-56-33.ppm  image_10_7_12-57-17.ppm  image_10_7_12-58-0.ppm  (+43 more)
